remove unneeded @Resource and fix warning by java11